[gd_scene load_steps=4 format=3 uid="uid://bhyquqjd50wp6"]

<<<<<<<< HEAD:battle/teleport bubble/bubble_teleport.tscn
[ext_resource type="Script" path="res://battle/teleport bubble/bubble_teleport.gd" id="1_8wkpv"]

========
[ext_resource type="Script" path="res://misc/teleport bubble/bubble_teleport.gd" id="1_8wkpv"]
[ext_resource type="Texture2D" uid="uid://bqnv851g4ja3j" path="res://icon.svg" id="2_gjauf"]
>>>>>>>> origin/pouya:misc/teleport bubble/bubble_teleport.tscn

[sub_resource type="CircleShape2D" id="CircleShape2D_rb576"]
radius = 30.0

[node name="BubbleTeleport" type="RigidBody2D"]
collision_layer = 4
collision_mask = 4
gravity_scale = 0.0
script = ExtResource("1_8wkpv")

[node name="sprite" type="Sprite2D" parent="."]
scale = Vector2(0.35, 0.35)
texture = ExtResource("2_gjauf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_rb576")

[node name="ChangeDirectionTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="BubblePopTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="ChangeDirectionTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="BubblePopTimer" to="." method="_on_bubble_pop_timer_timeout"]
